--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>墨点天气官方网站</title>
         <!--引入bootstrap框架-->
         <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-        <script src="http://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
+        <script src="jquery-1.9.1.min.js"></script>
         <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         
         <!--引入fullpage插件-->
