--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 $.ajax({
                     type:"get",
                     //请求地址
-                    url: 'http://api.k780.com/?app=weather.future&weaid=1&appkey=36262&sign=8b548a876ba354cf1765f662eeb8d335&format=json&jsoncallback=data',
+                    url: 'https://sapi.k780.com/?app=weather.future&weaid=1&appkey=36262&sign=8b548a876ba354cf1765f662eeb8d335&format=json&jsoncallback=data',
                    
                     dataType: 'jsonp',
                     jsonp: 'callback',
