--- a/index.html
+++ b/index.html
@@ -332,42 +332,42 @@
 
                 <div class="container page3_download">   
                     <div class="row">      
-                        <div class="download_list col-md-3 col-xs-4">
+                        <div class="download_list col-md-3 col-sm-4">
                             <a href="http://www.moji.com/android_down.php">
                                 <img src="http://www.moji.com/templets/mojichina/img/icon/index_68.png">
                                 <p>Android 7.6.2</p>
                             </a>
                         </div>  
 
-                        <div class="download_list col-md-3 col-xs-4">
+                        <div class="download_list col-md-3 col-sm-4">
                             <a href="http://mojichina.com/mjchann/channel.php?url=http://itunes.apple.com/cn/app/mo-ji-tian-qi-guan-fang/id434209233?mt=8&channelid=9001&userid=">
                                 <img src="http://www.moji.com/templets/mojichina/img/icon/index_65.png">
                                 <p>Ios 7.5.2</p>
                             </a>
                         </div>  
 
-                        <div class="download_list col-md-3 col-xs-4">
+                        <div class="download_list col-md-3 col-sm-4">
                             <a href="http://download.moji001.com/download/MJTVWeather-mojiweb-release.apk">
                                 <img src="http://www.moji.com/templets/mojichina/img/icon/index_71.png">
                                 <p>TV 1.1.1</p> 
                             </a>
                         </div> 
 
-                        <div class="download_list col-md-3 col-xs-4">
+                        <div class="download_list col-md-3 col-sm-4">
                             <a href="http://mojichina.com/mjchann/channel.php?url=http://itunes.apple.com/cn/app//id487161848?mt=8&channelid=10001&userid=">
                                 <img src="http://www.moji.com/templets/mojichina/img/icon/index_81.png">
                                 <p>iPad 2.8.1</p> 
                             </a>
                         </div>  
 
-                        <div class="download_list col-md-3 col-xs-4">
+                        <div class="download_list col-md-3 col-sm-4">
                             <a href="javascript:void(0);">
                                 <img src="http://www.moji.com/templets/mojichina/img/icon/index_84.png">
                                 <p>扫描下载</p> 
                             </a>
                         </div>  
 
-                        <div class="download_list col-md-3 col-xs-4">
+                        <div class="download_list col-md-3 col-sm-4">
                             <a href="/mjsoft/">
                                 <img src="http://www.moji.com/templets/mojichina/img/icon/index_86.png">
                                 <p>更多版本</p> 
