--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta http-equiv="Access-Control-Allow-Origin" content="*" />
         <title>墨点天气官方网站</title>
         <!--引入bootstrap框架-->
-        <link href="bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap-3.3.7.min.css" rel="stylesheet">
         <script src="jquery-1.9.1.min.js"></script>
-        <script src="bootstrap.min.js"></script>
+        <script src="bootstrap-3.3.7.min.js"></script>
         
         <!--引入fullpage插件-->
         <link href="jquery.fullPage.css" rel="stylesheet">
